# tergo

./: .gitignore  Cargo.toml  LICENSE  README.md  publish-in-order.sh  release-process.md  rustfmt.toml  tergo.toml
.github/workflows/: check-declared-vendor.yml  check-latest-vendor.yml  check-pkgdown.yml  pkgdown.yml  rpackage.yml  rust.yml  version-bump.yml
antidotum/tergo/: .Rbuildignore  .gitignore  .lintr  DESCRIPTION  LICENSE  LICENSE.md  LICENSE.note  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  configure  configure.win  cran_comments.md  pre-commit.sh  tergo.toml  test.Rmd  update_authors.R
antidotum/tergo/.Rproj.user/FB5D8757/: cpp-definition-cache
antidotum/tergo/.Rproj.user/FB5D8757/pcs/: files-pane.pper  find-replace-in-files.pper  windowlayoutstate.pper
antidotum/tergo/.Rproj.user/FB5D8757/sources/prop/: 6F557019  CCF668C8  INDEX
antidotum/tergo/.Rproj.user/FB5D8757/sources/session-3277adf4/: 7FB0F3D6-contents  9EA76EC8  9EA76EC8-contents  C06FF226  CECAA27F  CECAA27F-contents
antidotum/tergo/.Rproj.user/shared/notebooks/: paths
antidotum/tergo/.Rproj.user/shared/notebooks/C14BA602-test/1/FB5D87573277adf4/: chunks.json
antidotum/tergo/R/: addins.R  extendr-wrappers.R  styling.R  tergo.R
antidotum/tergo/data-raw/: bench.R
antidotum/tergo/docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  sitemap.xml
antidotum/tergo/docs/articles/: index.html  styling_with_tergo.html
antidotum/tergo/docs/reference/: check_rstudioapi.html  format_code.html  get_config.html  get_default_config.html  index.html  style.html  style_active_file_addin.html  style_file.html  style_pkg.html  style_pkg_addin.html  style_selection_addin.html  style_text.html  tergo-package.html
antidotum/tergo/inst/: AUTHORS  bench.R
antidotum/tergo/inst/rstudio/: addins.dcf
antidotum/tergo/man/: check_rstudioapi.Rd  format_code.Rd  get_config.Rd  get_default_config.Rd  get_printed_symbol.Rd  is_in_ignored_paths.Rd  style.Rd  style_active_file_addin.Rd  style_file.Rd  style_file_internal.Rd  style_pkg.Rd  style_pkg_addin.Rd  style_selection_addin.Rd  style_text.Rd  tergo-package.Rd  truncate_error.Rd
antidotum/tergo/src/: .gitignore  Makevars  Makevars.in  Makevars.win  Makevars.win.in  entrypoint.c  tergo-win.def
antidotum/tergo/src/rust/: .gitignore  Cargo.toml  check_vendor_updates.sh  vendor.sh  vendor.tar.xz
antidotum/tergo/src/rust/src/: lib.rs
antidotum/tergo/tests/: testthat.R
antidotum/tergo/tests/testthat/: test-style_text.R
antidotum/tergo/tools/: config.R  configure.R  msrv.R
antidotum/tergo/vignettes/: styling_with_tergo.Rmd
aqua/: Cargo.toml
aqua/src/: lib.rs  tokenizer.rs  tokens.rs
aqua/tests/: tokenizer_tests.rs
balnea/: Cargo.toml  README.md
balnea/src/: config.rs  lib.rs
balnea/tests/: format_integration.rs
balnea/tests/test_cases/: 005.expected  013.R  016.expected  017.R  020.R  021.expected  022.expected  025.expected  026.expected  029.R  030.R  033.R  037.R  039.R  041.R  043.expected  046.R  047.expected  049.expected  050.expected  051.expected  052.R  053.expected  058.expected  062.expected  064.R  065.R  067.R  068.expected  070.R  071.R  071.expected  073.R  073.expected  074.R  076.R  077.expected  079.R  080.R  083.R  (+86 more)
cli/: Cargo.toml
cli/src/: main.rs
formatter/: Cargo.toml
formatter/src/: code.rs  config.rs  format.rs  lib.rs
formatter/tests/: integration_test.rs
lib/: Cargo.toml
lib/src/: config.rs  lib.rs
lib/tests/: format_integration.rs
lib/tests/test_cases/: 003-3-line-length.expected  012.expected  016.R  017.expected  019.expected  021.R  024.expected  027.expected  030.expected  035.R  035.expected  036.R  038.R  038.expected  039.expected  040.R  040.expected  046.expected  047.R  047.expected  051.R  054.R  056.expected  061.R  066.expected  067.expected  075.R  076.expected  real_life_0.expected  real_life_000.R  real_life_000.expected  real_life_001.R  real_life_001.expected  tidyverse_style_guide_001.R  tidyverse_style_guide_004.R  tidyverse_style_guide_007.expected  tidyverse_style_guide_011.R  tidyverse_style_guide_012.R  tidyverse_style_guide_025.expected
parser/: Cargo.toml
parser-better/: Cargo.toml  r
parser-better/src/: ast.rs  comment.rs  compound.rs  expressions.rs  helpers.rs  lib.rs  literals.rs  program.rs  token_parsers.rs
parser/src/: ast.rs  comment.rs  compound.rs  expression.rs  expressions.rs  helpers.rs  lib.rs  literals.rs  parser.rs  pre_parsing_hooks.rs  program.rs  token_parsers.rs  whitespace.rs
parser/tests/: integration_test.rs
parser/tests/test_cases/: 006.R  016.R
sapo/: Cargo.toml
scopa/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
scopa/src/: extension.ts  lib.rs  tergo.ts
scopa/wit/: tergo.wit
spongia/: Cargo.toml
spongia/src/: ast.rs  compound.rs  expressions.rs  lib.rs  parser.rs  pre_parsing_hooks.rs  program.rs  token_parsers.rs  whitespace.rs
spongia/tests/: integration_test.rs
spongia/tests/test_cases/: 011.R  013.R  015.R  017.R
tergo/: .gitignore  Cargo.toml  README.md
tergo/src/: main.rs
tokenizer/: Cargo.toml
tokenizer/src/: ast.rs  compound.rs  expression.rs  helpers.rs  lib.rs  literals.rs  nom_trait_impls.rs  program.rs  statement.rs  tokenizer.rs  tokens.rs  tokens_buffer.rs
tokenizer/tests/: tokenizer_tests.rs
unguentum/: Cargo.toml
unguentum/src/: code.rs  config.rs  format.rs  lib.rs  post_format_hooks.rs  pre_format_hooks.rs
unguentum/tests/: config_parsing.rs
unguentum/tests/config_cases/: full_spec.toml
unsully/: Cargo.toml
unsully/src/: config.rs  lib.rs  main.rs
unsully/tests/: format_integration.rs
unsully/tests/test_cases/: 004.expected  006.expected  007.expected  011.expected  012.R  013.expected  014.expected  015.R  015.expected  016.R  018.expected  019.R  020.expected  023.expected  027.expected  028.R  028.expected  029.expected  034.R  037.expected  044.expected  048.R  049.R  050.R  052.expected  054.expected  057.expected  058.R  058.expected  059.R  060.expected  real_life_0.R
