[package]
name = "tergo-tokenizer"
version = "0.2.3"
edition = "2021"
authors = ["Konrad Pagacz konrad.pagacz@gmail.com"]
description = "R language tokenizer"
license = "MIT"
repository = "https://github.com/kpagacz/tergo/tree/main/aqua"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"

[dev-dependencies]
simple_logger = { version = "5.0.0", default-features = false, features = ["timestamps"] }
