[package]
name = "tergo-lib"
version = "0.2.12"
edition = "2021"
description = "A tool to format R code"
license = "MIT"
repository = "https://github.com/kpagacz/tergo/tree/main/balnea"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tokenizer = { package = "tergo-tokenizer", path = "../aqua", version = "0.2.5" }
parser = { package = "tergo-parser", path = "../spongia", version = "0.2.6" }
formatter = { package = "tergo-formatter", path = "../unguentum", version = "0.2.11" }
log = "0.4.28"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
simple_logger = { version = "5.0.0", features = [
  "timestamps",
], default-features = false }
