[package]
name = "tergo-lib"
version = "0.1.0"
edition = "2021"
description = "A tool to format R code"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tokenizer = { package = "tergo-tokenizer", path = "../tokenizer", version = "0.1.0" }
parser = { package = "tergo-parser", path = "../parser", version = "0.1.0" }
formatter = { package = "tergo-formatter", path = "../formatter", version = "0.1.0" }
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.210", features = ["derive"] }
