[package]
name = "tergo-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
anyhow = "1.0.81"
tokenizer = { package = "tergo-tokenizer", version = "0.1.0" }
log = "0.4.21"

[dev-dependencies]
env_logger = "0.11.3"
