[package]
name = "tergo-parser"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "Parser for tergo"
repository = "https://github.com/kpagacz/tergo/tree/main/spongia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
tokenizer = { package = "tergo-tokenizer", path = "../aqua", version = "0.2.4" }
log = "0.4.21"

[dev-dependencies]
simple_logger = { version = "5.0.0", default-features = false, features = [
  "timestamps",
] }
