[package]
name = "tergo"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Format code written in R"
repository = "https://github.com/kpagacz/tergo/"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
tergo-lib = { path = "../balnea", version = "0.2.8" }
toml = "0.8.19"
