[package]
name = "tergo"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "Format code written in R"
repository = "https://github.com/kpagacz/tergo/"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
log = "0.4.25"
simple_logger = { version = "5.0.0", default-features = false, features = [
  "timestamps",
] }
tergo-lib = { path = "../balnea", version = "0.2.11" }
toml = "0.8.20"
