[package]
name = "tergo"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "Format code written in R"
repository = "https://github.com/kpagacz/tergo/"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
log = "0.4.28"
simple_logger = { version = "5.0.0", default-features = false, features = [
  "timestamps",
] }
tergo-lib = { path = "../balnea", version = "0.2.12" }
toml = "0.9.7"
