[package]
name = "tergo-tokenizer"
version = "0.1.0"
edition = "2021"
authors = ["Konrad Pagacz konrad.pagacz@gmail.com"]
description = "R language tokenizer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
