[package]
name = "tergo-formatter"
version = "0.2.8"
edition = "2021"
license = "MIT"
description = "Formatter for tergo"
repository = "https://github.com/kpagacz/tergo/tree/main/unguentum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizer = { package = "tergo-tokenizer", path = "../aqua", version = "0.2.2" }
parser = { package = "tergo-parser", path = "../spongia", version = "0.2.3" }
log = "0.4.21"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11.3"
toml = "0.8.19"
