[package]
name = "tergo-formatter"
version = "0.2.11"
edition = "2021"
license = "MIT"
description = "Formatter for tergo"
repository = "https://github.com/kpagacz/tergo/tree/main/unguentum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizer = { package = "tergo-tokenizer", path = "../aqua", version = "0.2.5" }
parser = { package = "tergo-parser", path = "../spongia", version = "0.2.6" }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
simple_logger = { version = "5.0.0", default-features = false, features = [
  "timestamps",
] }
toml = "0.9.7"
