[package]
name = "unsully"
version = "0.1.0"
edition = "2021"
description = "A tool to format R code"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizer = { path = "../tokenizer" }
parser = { path = "../parser-better" }
formatter = { path = "../formatter" }
