[package]
name = "tergo-lib"
version = "0.1.0"
edition = "2021"
description = "A tool to format R code"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tokenizer = { package = "tergo-tokenizer", path = "../tokenizer" }
parser = { package = "tergo-parser", path = "../parser" }
formatter = { package = "tergo-formatter", path = "../formatter" }
log = "0.4.21"
env_logger = "0.11.3"
