[package]
name = "tergo"
version = "0.1.2"
edition = "2021"
rust-version = "1.65.0"

[lib]
crate-type = ["staticlib"]
name = "tergo"

[dependencies]
tergo-lib = "0.2.12"
toml = "0.9.7"
extendr-api = "0.8.1"

[workspace]
exclude = ["vendor", "repo_vendor"]

[profile.release]
lto = true
codegen-units = 1
